--- a/style.css
+++ b/style.css
@@ -80,21 +80,31 @@ nav{
     padding: 13px 5%;
 }
 .left-sidebar{
-    background: #cbdffa;
     flex-basis: 25%;
     position: sticky;
     top: 70px;
     align-self: flex-start;
-    height: 100vh;
+    
 }
 .right-sidebar{
-    background: #cbdffa;
     flex-basis: 25%;
     position: sticky;
     top: 70px;
     align-self: flex-start;
-    height: 100vh;
-}
+   }
 .main-content{
     flex-basis: 47%;
+}
+
+.imp-links a{
+    text-decoration: none;
+    display: flex;
+    align-items: center;
+    margin-bottom: 30px;
+    color: #626262;
+    width: fit-content;   
+}
+.imp-links a img{
+    width: 25px;
+    margin-right: 15px;
 }
