--- a/style.css
+++ b/style.css
@@ -34,7 +34,8 @@ nav{
 }
 .nav-user-icon img{
     width: 100px;
-    border-radius: 50%;
+    height: 100px;
+    border-radius: 80%;
     cursor: pointer;
 }
 .nav-user-icon{
@@ -95,8 +96,7 @@ nav{
 .main-content{
     flex-basis: 47%;
 }
-
-.imp-links a{
+.imp-links a, .shorcut-links a{
     text-decoration: none;
     display: flex;
     align-items: center;
@@ -109,5 +109,18 @@ nav{
     margin-right: 15px;
 }
 .imp-links a:last-child{
-   color: #1876f2
+    color: #1876f2
+ }
+.imp-links{
+    border-bottom: 1px solid #ccc;
+}
+.shorcut-links a img{
+    width: 40px;
+    border-radius: 4px;
+    margin-right: 15px;
+}
+.shorcut-links p{
+    margin: 25px 0;
+    color: #626262;
+    font-weight: 500;
 }
