--- a/style.css
+++ b/style.css
@@ -85,13 +85,16 @@ nav{
     position: sticky;
     top: 70px;
     align-self: flex-start;
-    
-}
+    }
 .right-sidebar{
     flex-basis: 25%;
     position: sticky;
     top: 70px;
     align-self: flex-start;
+    background: #fff;
+    padding: 20px;
+    border-radius: 4px;
+    color: #626262;
    }
 .main-content{
     flex-basis: 47%;
@@ -123,4 +126,20 @@ nav{
     margin: 25px 0;
     color: #626262;
     font-weight: 500;
+}
+
+.sidebar-title{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 18px;   
+   }
+   .sidebar-title h4{
+       font-weight: 600;
+       font-size: 16;
+   }
+   .sidebar-title a{
+    text-decoration: none;
+    color: #1876f2;
+    font-size: 12px;
 }
